# War-is-Coming

./: .gitignore  Proyecto 1.md  README.md  Resources.md  ToDo.md  core.py  core.txt  date_validation .txt  date_validation.py  event .txt  git-commands.txt  main.py  main.txt  pyproject.toml  report.md  tasks.json  tasks.md  tests.py  war_planner.json
data/: default_data.json  default_data.py  tasks.json  war_planner.json
interface/: calendar.py  command_add_event.py  command_delete_event.py  command_view_details.py  console.py
models/: event.py  events.py  resource.py  restriction.py
services/: 2_date_validation.py  core.py  date_validation.py  exclusion_restrictions.py  inclusion_restrictions.py  inventory_manager.py  planner.py  validator.py
src/core/: constraint_validator.py
src/interface/: command_add_event.py  command_delete_event.py  command_list_events.py  command_view_details.py  main_menu.py
src/models/: event.py  resource.py
src/services/: data_manager.py  planner.py  time_manager.py  validation_logic.py  war_planner.json
src/utils/: data_loader.py  time_manager.py
tests and resources/: Proyecto 1.md  Resources.md  calendar_function.py  events.md  houses.md  notes.md  project-overview.md  report.md  resource.py  resources.md  resources2.md  restrictions.md  tasks.md  tests.py
