[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "war-is-coming"
version = "0.1.0"
description = "Planificador de eventos bélicos basado en el universo de la saga A Song of Ice and Fire"
readme = "README.md"
authors = [
    {name = "Cynthia Moreno Miranda", email = "cynthia.moreno.2026@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich"
]